WIP: landing page. Shop and blogs landing pages done! - shop.css fixed. Now the own shop header fits with the general navbar

--- a/shop/shop.html
+++ b/shop/shop.html
@@ -5,14 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PadelFusion | La Mejor Tienda de Padel</title>
     <script src="./src/script.js"></script>
-    <link rel="stylesheet" href="/style/main.css">
+    <link rel="stylesheet" href="/style/landingPageStyle.css">
     <link rel="stylesheet" href="/style/shop.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto" rel="stylesheet">
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="navbar">
+            <img src="../assets/Logo.png" alt="padel-fusion">
+            <!-- <div>
+                                        <input type="text" placeholder="Search.." name="search">
+                                        <button type="submit"><i class="fa fa-search"></i></button>
+                                        </div> -->
+
+            <div class="tabs">
+                <a href="../index.html" class="nav-btn">Home</a>
+                <a href="./shop.html" class="nav-btn">Tienda</a>
+                <a href="../index.html" class="nav-btn">Blogs</a>
+                <a href="../about/about.html" class="nav-btn">Sobre nosotros</a>
+                <a href="../contact/contact.html" class="nav-btn">Contáctanos</a>
+            </div>
         </nav>
+    </header>
     </header>
     <main>
         <section class="intro">
