--- a/shop/shop.html
+++ b/shop/shop.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PadelFusion | La Mejor Tienda de Padel</title>
-    <script src="./src/script.js"></script>
+    <script src="../src/script.js"></script>
     <link rel="stylesheet" href="/style/landingPageStyle.css">
     <link rel="stylesheet" href="/style/shop.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto" rel="stylesheet">
