about and contact html working in progress

--- a/about/about-v1.html
+++ b/about/about-v1.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PadelFusion | La Mejor Tienda de Padel</title>
     <script src="/src/script.js"></script>
-    <link rel="stylesheet" href="/style/aboutStyle.css">
+    <link rel="stylesheet" href="/style/aboutStyle-v1.css">
 </head>
 
 <body>
@@ -25,6 +25,8 @@
         </section>
 
         <section id="about-us">
+            <div class="container">
+                <div class="textos">
                     <div class="who-we-are">
                         <h4>¿Quiénes somos?</h4>
                         <p>Padel Fusion es una empresa comprometida con la pasión por el pádel. Nos dedicamos a proporcionar
