--- a/contact/contact.html
+++ b/contact/contact.html
@@ -17,59 +17,15 @@
     </header>
 
     <main>
-        <div class="Contact Us"></div>
-        <h3>Contact Us!</h3>
-        <p>Have questions or need assistance? We’re here for you!</p>
+        <div class="contact-us"></div>
+        <h2>¡Contáctanos!</h2>
+        <p>¿Tienes alguna pregunta o necesitas ayuda? ¡Aquí estamos para ayudarte!</p>
         <p><b>Email:</b>contact@padel-fusion.com</p>
-        <p><b>Phone number:</b> +34 123 456 789.</p>
-        <p><b>Direction: </b> C/Las Torres, 24</p>
-        <p><b>Timetable: </b> Monday - Saturday 9:00am - 8:00pm</p>
-        <p><b>Contact Form: </b>Fill out the form on our website. : PONER ENLACE FORMULARIO</p> 
+        <p><b>Teléfono de contacto:</b> +34 123 456 789.</p>
+        <p><b>Dirección: </b> C/Las Torres, 24</p>
+        <p><b>HOrario: </b> Lunes - Sábados 9:00am - 20:00pm</p>
+        <p><b>Formulario de contacto: </b>Fill out the form on our website. : PONER ENLACE FORMULARIO</p> 
      </main>
-
-         <form action="" method="post" class="myFormStyle" onsubmit="return validarFormulario()">
-        <div class="title">
-            <p>Customer Information</p>
-        </div>
-
-    <div class="myInputs">
-        <label for="Asunto">Issue:</label>
-        <select id="Asunto" name="Asunto">
-            <option value=" ">-</option>
-            <option value="Customer Support">Customer Support</option>
-            <option value="Post-sales Service">Post-sales Service</option>
-        </select>
-    
-    </div>
-
-        <div class="myInputs">
-            <label for="name">First name: </label>
-            <input type="text" name="name" id="name" required />
-        </div>
-
-        <div class="myInputs">
-            <label for="lastname">Last name: </label>
-            <input type="text" name="lastname" id="lastname" required />
-        </div>
-
-        <div class="myInputs">
-            <label for="email">Email: </label>
-            <input type="email" name="email" id="email" required />
-        </div>
-        <div class="myInputs">
-            <label for="phonenumber">Phone number: </label>
-            <input type="tel" name="number" id="phonenumber" required />
-        </div>
-
-        <div class="myInputs">
-            <label for="password">Password: </label>
-            <input type="password" name="password" id="password" required />
-        </div>
-
-        <div class="myInputs">
-            <label for="confirm password">Confirm you password: </label>
-            <input type="password" name="confirmpassword" id="confirmpassword" required />
-        </div>
 
 </body>
 
