working in progress

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="tabs">
                 <a href="./index.html" class="nav-btn">Home</a>
                 <a href="./shop/shop.html" class="nav-btn">Tienda</a>
-                <a href="./index.html" class="nav-btn">Blogs</a>
+                <a href="#news" class="nav-btn">Noticias</a>
                 <a href="./about/about.html" class="nav-btn">Sobre nosotros</a>
                 <a href="./contact/contact.html" class="nav-btn">Contáctanos</a>
             </div>
@@ -40,7 +40,7 @@
 
         </div>
 
-        <div class="shop-landing-page">
+        <div class="shop-landing-page" >
             <div>
                 <h1 class="title-shop-landing-page">¡Sumérgete en nuestra tienda!</h1>
             </div>
@@ -80,7 +80,7 @@
         
         </div>
 
-        <div class="blog-landing-page">
+        <div class="blog-landing-page"  id="news">
             <div>
                 <h1 class="blogs-title-landing-page">¡Entérate de las últimas noticias!</h1>
             </div>
@@ -116,6 +116,12 @@
         </div>
 
         <div class="aboutus-contactus-landing-page">
+            <div>
+                <p>About us</p>
+            </div>
+            <div>
+                <p>Contact us</p>
+            </div>
         
         </div>
 
