--- a/contact/form.html
+++ b/contact/form.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PadelFusion | La Mejor Tienda de Padel</title>
     <script src="/src/script.js"></script>
-    <link rel="stylesheet" href="/style/main.css">
+    <link rel="stylesheet" href="/style/formStyle.css">
 </head>
 
 <body>
