all parts linked with the tabs. Style reformatted.

--- a/shop/shop.html
+++ b/shop/shop.html
@@ -12,20 +12,20 @@
 <body>
     <header>
         <nav class="navbar">
-            <img src="../assets/Logo.png" alt="padel-fusion">
-            <!-- <div>
-                                        <input type="text" placeholder="Search.." name="search">
-                                        <button type="submit"><i class="fa fa-search"></i></button>
-                                        </div> -->
-
-            <div class="tabs">
-                <a href="../index.html" class="nav-btn">Home</a>
-                <a href="./shop.html" class="nav-btn">Tienda</a>
-                <a href="../index.html" class="nav-btn">Blogs</a>
-                <a href="../about/about.html" class="nav-btn">Sobre nosotros</a>
-                <a href="../contact/contact.html" class="nav-btn">Contáctanos</a>
+            <a href="../index.html"><img src="../assets/Logo.png" alt="padel-fusion"></a>
+            <div class="options-navbar">
+                <div class="tabs">
+                    <a href="../index.html" class="nav-btn">Home</a>
+                    <a href="../shop/shop.html" class="nav-btn">Tienda</a>
+                    <a href="../about/about_finished.html" class="nav-btn">Sobre nosotros</a>
+                    <a href="../contact/contact_finished.html" class="nav-btn">Contáctanos</a>
+        
+                </div>
+                <div class="cart-icon">
+                    <img src="../assets/picture-shopping-cart-landing-page.png" alt="Carrito de compra">
+        
+                </div>
             </div>
-        </nav>
     </header>
     </header>
     <main>
