--- a/shop/shop.html
+++ b/shop/shop.html
@@ -24,29 +24,29 @@
     <main>
         <section class="intro">
                 <h1>PadelFusion Store</h1>
-                <p><span>Compra las mejores <b>palas</b>, <b>camisetas</b>, <b>zapatillas</b> y más artículos de pádel en nuestra tienda online.</span></p>
-                <p><span>¡Disponemos de la mayor variedad de productos al <b>mejor precio</b>!</span></p>
+                <div>
+                    <p>Compra las mejores <b>palas</b>, <b>camisetas</b>, <b>zapatillas</b> y más artículos de pádel en nuestra tienda online.</p>
+                    <p>¡Disponemos de la mayor variedad de productos al <b>mejor precio</b>!</p>
+                </div>
         </section>
         <section class="base">
             <section class="filters">
                 <h3>Filtros:</h3>
-                <button id="sort-asc">Precio: Menor a Mayor</button>
-                <button id="sort-desc">Precio: Mayor a Menor</button>
-                <button id="sort-discount">Más rebajado</button>
+                <button id="sort-asc" class="filter1">Precio: Menor a Mayor</button>
+                <button id="sort-desc" class="filter1">Precio: Mayor a Menor</button>
+                <button id="sort-discount" class="filter1">Más rebajado</button>
                 <div class="filter-price">
-                    <span id="precio-minimo">0€</span>
-                    <input type="range" min="0" max="200" value="50" class="slider" id="rango-precio">
-                    <span id="precio-maximo">200€</span>
+                    <span id="min-price">0€</span>
+                    <input type="range" min="0" max="200" value="200" id="slider">
+                    <span id="max-price">200€</span>
                 </div>
             </section>
             <section class="content">
                 <section class="category">
-                    <ul>
-                        <li>Todos</li>
-                        <li>Palas</li>
-                        <li>Zapatillas</li>
-                        <li>Camisetas</li>
-                    </ul>
+                    <button id="todos" class="filter2">Todos</button>
+                    <button id="palas" class="filter2">Palas</button>
+                    <button id="zapatillas" class="filter2">Zapatillas</button>
+                    <button id="camisetas" class="filter2">Camisetas</button>
                 </section>
                 <hr>
                 <section class="products">
@@ -57,7 +57,7 @@
                         </div>
                         <div class="name">NOX ML10 PRO CUP CORP</div>
                         <div class="price">79.94€</div>
-                        <div class="cart"><button type="button" class="cartButton">Añadir al carrito</button></div>
+                        <div><button class="cartButton">Añadir al carrito</button></div>
                     </div>
                     <div class="product" id="pala">
                         <div class="offer">
@@ -66,7 +66,7 @@
                         </div>
                         <div class="name">BULLPADEL VERTEX 03</div>
                         <div class="price">144.95€</div>
-                        <div class="cart"><button type="button" class="cartButton">Añadir al carrito</button></div>
+                        <div><button class="cartButton">Añadir al carrito</button></div>
                     </div>
                     <div class="product" id="pala">
                         <div class="offer">
@@ -213,6 +213,14 @@
                         <div class="cart"><button type="button" class="cartButton">Añadir al carrito</button></div>
                     </div>
                 </section>
+            </section>
+            <section class="products-cart">
+                <div id="carrito" class="carrito">
+                    
+                </div>
+                <div id="total-cart" class="total-cart">
+
+                </div>
             </section>
         </section>
     </main>
