--- a/shop/shop.html
+++ b/shop/shop.html
@@ -11,14 +11,14 @@
 <body>
     <header>
         <nav class="navbar">
-            <img src="../assets/Logo.png" alt="padel-fusion">
+            <a href="/index.html"><img class="logo" src="/assets/Logo.png" alt="padel-fusion"></a>
             <div class="tabs">
-                <a href="../index.html" class="nav-btn">Home</a>
-                <a href="./shop.html" class="nav-btn">Tienda</a>
-                <a href="../index.html" class="nav-btn">Blogs</a>
-                <a href="../about/about.html" class="nav-btn">Sobre nosotros</a>
-                <a href="../contact/contact.html" class="nav-btn">Contáctanos</a>
-            </div>
+                <a href="/index.html" class="nav-btn">Home</a>
+                <a href="/shop/shop.html" class="nav-btn">Tienda</a>
+                <a href="/about/about.html" class="nav-btn">Sobre nosotros</a>
+                <a href="/contact/contact.html" class="nav-btn">Contáctanos</a>
+                <img class="cart-icon" src="/assets/shopping-bag.png" alt="Carrito de compra">
+            </div>                    
         </nav>
     </header>
     <main>
