Shopping bag done

--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
 <body>
     <header>
         <nav class="navbar">
-            <h1><a href="./index.html"><img class="logo" src="/assets/Logo.png" alt="Padel Fusion"></a></h1>
+            <a href="/index.html"><img class="logo" src="./assets/Logo.png" alt="padel-fusion"></a>
             <div class="tabs">
-                <a href="./index.html" class="nav-btn">Home</a>
                 <a href="./shop/shop.html" class="nav-btn">Tienda</a>
                 <a href="./about/about.html" class="nav-btn">Sobre nosotros</a>
                 <a href="./contact/contact.html" class="nav-btn">Contáctanos</a>
-                <img class="cart-icon" src="/assets/shopping-bag.png" alt="Carrito de compra">
+                <div class="shopping-bag">
+                    <img class="cart-icon" src="./assets/shopping-bag.png" alt="Carrito de compra">
+                    <span class="bag-number">0</span>
+                </div>
             </div>
         </nav>
     </header>
