--- a/shop/shop.html
+++ b/shop/shop.html
@@ -13,11 +13,13 @@
         <nav class="navbar">
             <a href="/index.html"><img class="logo" src="/assets/Logo.png" alt="padel-fusion"></a>
             <div class="tabs">
-                <a href="/index.html" class="nav-btn">Home</a>
                 <a href="/shop/shop.html" class="nav-btn">Tienda</a>
                 <a href="/about/about.html" class="nav-btn">Sobre nosotros</a>
                 <a href="/contact/contact.html" class="nav-btn">Contáctanos</a>
-                <img class="cart-icon" src="/assets/shopping-bag.png" alt="Carrito de compra">
+                <div class="shopping-bag">
+                    <img class="cart-icon" src="/assets/shopping-bag.png" alt="Carrito de compra">
+                    <span class="bag-number">0</span>
+                </div>
             </div>                    
         </nav>
     </header>
@@ -25,7 +27,7 @@
         <section class="intro">
                 <h1>PadelFusion Store</h1>
                 <div>
-                    <p>Compra las mejores <b>palas</b>, <b>camisetas</b>, <b>zapatillas</b> y más artículos de pádel en nuestra tienda online.</p>
+                    <p>Compra las mejores <b>palas</b>, <b>camisetas</b> y <b>zapatillas</b> de pádel en nuestra tienda online.</p>
                     <p>¡Disponemos de la mayor variedad de productos al <b>mejor precio</b>!</p>
                 </div>
         </section>
