I have changed both about.html and contact.html. I have also updated and enhanced styles for both files.

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PadelFusion | La Mejor Tienda de Padel</title>
     <script src="/src/script.js"></script>
-    <link rel="stylesheet" href="/style/contactStyle_finished.css">
+    <link rel="stylesheet" href="/style/contactStyle.css">
 </head>
 
 <body>
@@ -53,7 +53,7 @@
         
                     <div class="myInputs">
                         <label for="asunto">Indícanos en qué podemos ayudarte: </label> <br>
-                        <textarea name="asunto" id="asunto" oninput="autoresize(this)" style="min-width: 300px; height: 50px;"
+                        <textarea name="asunto" id="asunto" oninput="autoresize(this)" style="min-width: 400px; min-height: 90px;"
                             required></textarea>
                     </div> <br>
         
