--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                 <div class="tabs">
                     <a href="./index.html" class="nav-btn">Home</a>
                     <a href="./shop/shop.html" class="nav-btn">Tienda</a>
-                    <a href="./about/about_finished.html" class="nav-btn">Sobre nosotros</a>
-                    <a href="./contact/contact_finished.html" class="nav-btn">Contáctanos</a>
+                    <a href="./about/about.html" class="nav-btn">Sobre nosotros</a>
+                    <a href="./contact/contact.html" class="nav-btn">Contáctanos</a>
             
                 </div>
                 <div class="cart-icon">
