navbar fixed and improved. Pictures adapted better. Style fixed.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>PadelFusion | La Mejor Tienda de Padel</title>
     <script src="/src/landingPage.js"></script>
     <link rel="stylesheet" href="/style/landingPageStyle.css">
+    <link rel="icon" href="./assets/favicon.png" type="image/png">
 </head>
 
 <body>
@@ -18,7 +19,7 @@
                 <a href="./about/about.html" class="nav-btn">Sobre nosotros</a>
                 <a href="./contact/contact.html" class="nav-btn">Contáctanos</a>
                 <div class="shopping-bag">
-                    <img class="cart-icon" src="./assets/shopping-bag.png" alt="Carrito de compra">
+                    <!-- <img class="cart-icon" src="./assets/shopping-bag.png" alt="Carrito de compra"> -->
                     <span class="bag-number">0</span>
                 </div>
             </div>
