--- a/about/about.html
+++ b/about/about.html
@@ -7,12 +7,23 @@
     <title>PadelFusion | La Mejor Tienda de Padel</title>
     <script src="/src/script.js"></script>
     <link rel="stylesheet" href="/style/aboutStyle.css">
+    <link rel="stylesheet" href="/style/landingPageStyle.css">
+    <link rel="icon" href="./assets/favicon.png" type="image/png">
+
 </head>
 
 <body>
     <header>
-        <nav>
-
+        <nav class="navbar">
+            <a href="/index.html"><img class="logo" src="../assets/Logo.png" alt="padel-fusion"></a>
+            <div class="tabs">
+                <a href="../shop/shop.html" class="nav-btn">Tienda</a>
+                <a href="../about/about.html" class="nav-btn">Sobre nosotros</a>
+                <a href="../contact/contact.html" class="nav-btn">Contáctanos</a>
+                <div class="shopping-bag">
+                    <span class="bag-number">0</span>
+                </div>
+            </div>
         </nav>
     </header>
 
