--- a/shop/shop.html
+++ b/shop/shop.html
@@ -7,20 +7,21 @@
     <link rel="stylesheet" href="/style/landingPageStyle.css">
     <link rel="stylesheet" href="/style/shop.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto" rel="stylesheet">
+    <link rel="icon" href="./assets/favicon.png" type="image/png">
 </head>
 <body>
     <header>
         <nav class="navbar">
-            <a href="/index.html"><img class="logo" src="/assets/Logo.png" alt="padel-fusion"></a>
+            <a href="/index.html"><img class="logo" src="../assets/Logo.png" alt="padel-fusion"></a>
             <div class="tabs">
-                <a href="/shop/shop.html" class="nav-btn">Tienda</a>
-                <a href="/about/about.html" class="nav-btn">Sobre nosotros</a>
-                <a href="/contact/contact.html" class="nav-btn">Contáctanos</a>
+                <a href="../shop/shop.html" class="nav-btn">Tienda</a>
+                <a href="../about/about.html" class="nav-btn">Sobre nosotros</a>
+                <a href="../contact/contact.html" class="nav-btn">Contáctanos</a>
                 <div class="shopping-bag">
-                    <img class="cart-icon" src="/assets/shopping-bag.png" alt="Carrito de compra">
+                    <!-- <img class="cart-icon" src="./assets/shopping-bag.png" alt="Carrito de compra"> -->
                     <span class="bag-number">0</span>
                 </div>
-            </div>                    
+            </div>
         </nav>
     </header>
     <main>
