--- a/shop/shop.html
+++ b/shop/shop.html
@@ -219,7 +219,13 @@
             </section>
             <section class="products-cart">
                 <div id="carrito" class="carrito">
-                    
+                    <div class="cabecera-carrito">
+                        <div>Foto</div>
+                        <div>Nombre</div>
+                        <div>Unidades</div>
+                        <div>Total</div>
+                        <div>Eliminar</div>
+                    </div>
                 </div>
                 <div id="total-cart" class="total-cart">
 
