--- a/about/about.html
+++ b/about/about.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PadelFusion | La Mejor Tienda de Padel</title>
-    <script src="/src/script.js"></script>
+    <!-- <script src="/src/script.js"></script> -->
     <link rel="stylesheet" href="/style/aboutStyle.css">
     <link rel="stylesheet" href="/style/landingPageStyle.css">
-    <link rel="icon" href="./assets/favicon.png" type="image/png">
+    <link rel="icon" href="../assets/favicon.png" type="image/png">
 
 </head>
 
