final changes. Styles improved. Container readapted.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
                 <a href="./about/about.html" class="nav-btn">Sobre nosotros</a>
                 <a href="./contact/contact.html" class="nav-btn">Contáctanos</a>
                 <div class="shopping-bag">
-                    <!-- <img class="cart-icon" src="./assets/shopping-bag.png" alt="Carrito de compra"> -->
                     <span class="bag-number">0</span>
                 </div>
             </div>
@@ -29,15 +28,15 @@
         <div class="home-landing-page">
             <div class="content">
                 <h2>Bienvenido a PadelFusion</h2>
-                <p>Somos tu tienda de pádel de confianza, ofreciendo una amplia gama de productos de alta calidad para mejorar tu
+                <p>Somos <b>tu tienda de pádel de confianza</b>, ofreciendo una amplia gama de productos de alta calidad para mejorar tu
                     juego.</p>
                 <ul>
                     <li>Palas de pádel de las mejores marcas.</li>
                     <li>Ropa deportiva diseñada para la máxima comodidad y rendimiento.</li>
                     <li>Zapatos especializados para jugar al pádel.</li>
                 </ul>
-                <p>Nos enorgullece ofrecer un servicio post venta excepcional, garantizando tu satisfacción en cada compra.</p>
-                <p>Además, ofrecemos un servicio único de palas de prueba, para que puedas encontrar la pala perfecta adaptada a tu
+                <p>Nos enorgullece ofrecer un <b>servicio post venta excepcional</b>, garantizando tu satisfacción en cada compra.</p>
+                <p>Además, ofrecemos un servicio único de palas de prueba, para que puedas encontrar <b>la pala perfecta</b> adaptada a tu
                     estilo de juego antes de comprarla.</p>
             </div>
 
@@ -63,10 +62,12 @@
                     </div>
                 </div>
                 <div class="goto-shop">
-                    <p>Sumérgete en el emocionante mundo del pádel con nuestra amplia gama de productos de alta calidad, que incluyen
-                        camisas, palas y zapatillas diseñadas para mejorar tu rendimiento en la pista. Ya seas un jugador experimentado o estés
-                        dando tus primeros pasos en este apasionante deporte, estamos aquí para proporcionarte todo lo que necesitas para brillar
-                        en cada partido. Haz clic aquí para explorar nuestra selección y llevar tu juego al siguiente nivel.</p>
+                    <p>Sumérgete en el emocionante mundo del pádel con nuestra amplia gama de <b>productos de alta calidad</b>, que incluyen
+                        camisas, palas y zapatillas diseñadas para <b>mejorar tu rendimiento</b> en la pista. </p>
+                        <p>Ya seas un jugador experimentado o estés
+                        dando tus primeros pasos en este apasionante deporte, estamos aquí para proporcionarte todo lo que necesitas para
+                        <b>brillar
+                            en cada partido</b>. Haz clic aquí para explorar nuestra selección y llevar tu juego al siguiente nivel.</p> 
                     <a href="./shop/shop.html" class="shop-btn">Ir a la tienda</a>
                 </div>
             </div>
