--- a/shop/shop.html
+++ b/shop/shop.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/style/landingPageStyle.css">
     <link rel="stylesheet" href="/style/shop.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto" rel="stylesheet">
-    <link rel="icon" href="./assets/favicon.png" type="image/png">
+    <link rel="icon" href="../assets/favicon.png" type="image/png">
 </head>
 <body>
     <header>
