--- a/contact/contact.html
+++ b/contact/contact.html
@@ -8,7 +8,7 @@
     <!-- <script src="/src/script.js"></script> -->
     <link rel="stylesheet" href="/style/contactStyle.css">
     <link rel="stylesheet" href="/style/landingPageStyle.css">
-    <link rel="icon" href="./assets/favicon.png" type="image/png">
+    <link rel="icon" href="../assets/favicon.png" type="image/png">
 
 </head>
 
